# Positive-or-Negative

./: README.md  mainAlgorithm.py  pyproject.toml  tree.dot
