[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "machine-learning"
version = "0.1.0"
[tool.poetry.dependencies]
python = "^3.7"
scikit-learn = "^0.22.2"
[tool.poetry.dev-dependencies]
